@@ -994,29 +994,6 @@ name|method
 argument_list|)
 condition|)
 block|{
-name|String
-name|contentType
-init|=
-name|method
-operator|.
-name|getResponseHeader
-argument_list|(
-literal|"content-type"
-argument_list|)
-operator|.
-name|getValue
-argument_list|()
-decl_stmt|;
-name|String
-name|bodyCharset
-init|=
-name|BasicURLHandler
-operator|.
-name|getCharSetFromContentType
-argument_list|(
-name|contentType
-argument_list|)
-decl_stmt|;
 return|return
 operator|new
 name|URLInfo
@@ -1033,7 +1010,10 @@ argument_list|(
 name|method
 argument_list|)
 argument_list|,
-name|bodyCharset
+name|method
+operator|.
+name|getRequestCharSet
+argument_list|()
 argument_list|)
 return|;
 block|}
